# go2-nav2-wifi

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docker/: .env.example  Dockerfile  check-robot.sh  cyclonedds-eth.xml  cyclonedds.xml  docker-compose.yml  download-debs.sh  entrypoint.sh  go2-bashrc.snippet  install-deps.sh  run.sh  setup-host-eth.sh  setup-robot-eth.sh  setup-robot-net.sh  setup-robot-wifi.sh  setup-unitree-dds.sh  setup-unitree-ros2.sh  shell.sh  source-go2-ws.sh  source-unitree.sh  wifi-check.sh
docs/: NAVIGATION.md  RELAY-WIFI.md
go2_description/: CMakeLists.txt  README.md  package.xml
go2_nav2/: package.xml  setup.cfg  setup.py
go2_nav2/config/: go2_nav2_minimal.yaml  odom_tf.yaml  patrol_example.yaml  pointcloud_to_laserscan.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml  sport_bridge.yaml
go2_nav2/go2_nav2/: cloud_stamp_sync.py  goal_pose_nav.py  joint_state_bridge.py  map_odom_relay.py  nav2_goal_exec.py  odom_tf.py  patrol.py  pre_rotate.py  simple_navigator.py  sport_bridge.py  sport_state_odom.py  waypoint_recorder.py
go2_nav2/launch/: bringup_viz.launch.py  nav2_slam_loc.launch.py  patrol.launch.py  robot_description.launch.py  sensors.launch.py  slam_mapping.launch.py  sport_bridge.launch.py
go2_nav2/rviz/: bringup.rviz  nav.rviz  slam.rviz
go2_nav2/urdf/: go2_vis.urdf
ws/scripts/: build-unitree-msgs.sh  build.sh  check-nav-cmdvel.sh  check-slam.sh  check-teleop-wifi.sh  check-tf-nav.sh  check-tf-odom.sh  check-wifi-dds.sh  deploy-robot-wifi.sh  find-robot-ip.sh  go2-env.sh  go2_camera_jpeg_cli.cpp  go2_cmd_vel_tcp.py  kill-stale-odom-tf.sh  nav-to-point.sh  record-waypoints.sh  robot-bootstrap-unitree-sdk2.sh  robot-build-camera-cli.sh  robot-build-unitree-msgs.sh  robot-check-cmdvel.sh  robot-check-topics.sh  robot-install-camera-sdk.sh  robot-relay-wifi.sh  robot-setup-camera.sh  robot-setup-wifi-robot.sh  robot-show-dds.sh  robot-source-unitree-ros.sh  robot_front_camera_bridge.py  robot_relay_wifi.py  robot_sport_bridge.py  save-map.sh  setup-robot-eth.sh  setup-robot-wifi.sh  start-cmdvel-tcp-client.sh  teleop-slam.sh
ws/scripts/go2_camera_jpeg_cli/: CMakeLists.txt
