<?xml version="1.0"?>
<package format="3">
  <name>go2_nav2</name>
  <version>0.2.0</version>
  <description>Unitree Go2 Edu: SLAM, localization, Nav2, sport_bridge</description>
  <maintainer email="danya@local">danya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>unitree_api</exec_depend>
  <exec_depend>unitree_go</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>unitree_go</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
